--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press Start button to play</h1>
   <div class="container">
     <div lass="row">
 
@@ -34,7 +34,8 @@
     </div>
 
   </div>
-
+  <div type="button" class="start-button">Start</div>
+  <p>Made with ❤️ by Dvij Kalsi</p>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
 
